GdkWin32: Fix paste of color-indexed bitmaps when biClrUsed is zero

Patch proposed by user @Dwedit in #6685

Fixes https://gitlab.gnome.org/GNOME/gtk/-/issues/6685